infra/error-pages/catch-all-novozhenin-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: error-pages-catch-all-novozhenin-http
  namespace: infra
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`novozhenin.ru`) || HostRegexp(`^[a-zA-Z0-9-]+\.novozhenin\.ru$`)
      kind: Rule
      priority: 1
      middlewares:
        - name: redirect-to-https
          namespace: infra
      services:
        - name: error-pages
          port: 8080
          namespace: infra
