infra/error-pages/catch-all-novozhenin.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: error-pages-catch-all-novozhenin
  namespace: infra
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`^[a-zA-Z0-9-]+\.novozhenin\.ru$`)
      kind: Rule
      priority: 1
      middlewares:
        - name: error-pages
          namespace: infra
      services:
        - name: error-pages
          port: 8080
          namespace: infra
  tls:
    secretName: wildcard-novozhenin-ru-tls
